<resources>
    <string name="app_name">User Github App</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">aaliyahfarah</string>
    <string name="name">Aaliyah Farah Adibah</string>
    <string name="search_message">Find Github user</string>
    <string name="location">Location not found</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="search_hint">Search</string>
    <string name="user_not_found">User Not Found</string>
    <string name="followers_not_found">Followers Not Found</string>
    <string name="following_not_found">Following Not Found</string>
    <string name="repository">Repository</string>
    <string name="value">0</string>
    <string name="title_activity_detail_user">DetailUserActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="favorite" translatable="true">Favorite</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="dark_mode" translatable="true">Dark Mode</string>
</resources>